<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/registationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/register"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:ems="10"
            android:hint="@string/username"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/registationTextView"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userEmailEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:ems="10"
            android:hint="@string/password_again"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/passwordEditText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordAgainEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/phoneSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:padding="@dimen/default_padding" />

        <RadioGroup
            android:id="@+id/accountTypeGroup"
            android:layout_width="377dp"
            android:layout_height="52dp"
            android:layout_below="@+id/phoneSpinner"
            android:layout_marginStart="80dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="@dimen/top_margin"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <RadioButton
                android:id="@+id/buyerRadioButton"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:text="@string/buyer" />

            <RadioButton
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/seller" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/accountTypeGroup"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_marginBottom="@dimen/button_top_margin"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:onClick="register"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/cancel"
                android:onClick="cancel"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>